--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@jbrowse/react-linear-genome-view": "^2.15.4",
     "@vitejs/plugin-legacy": "^5.4.1",
     "@vitejs/plugin-vue": "^5.1.2",
     "apexcharts": "^3.53.0",
@@ -19,7 +20,7 @@
     "csv-parser": "^3.0.0",
     "d3": "^7.9.0",
     "echarts": "^5.5.1",
-    "element-plus": "^2.8.3",
+    "element-plus": "^2.8.5",
     "express": "^4.21.0",
     "papaparse": "^5.4.1",
     "pinia": "^2.2.2",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@rollup/wasm-node": "^4.24.0",
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.28.0",
     "globals": "^15.11.0"
