--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.21.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "markdown-it": "^14.1.0",
     "marked": "^15.0.4",
     "papaparse": "^5.4.1",
     "pdfjs-dist": "^4.10.38",
